--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		<p>Tuttavia, diversi dati statistici dimostrano che la maggioranza degli italiani, ancora oggi, si preoccupa della propria salute psico-fisica soltanto al manifestarsi di qualche disturbo.</p>
 		<p>Va detto però che finalmente anche nel Bel Paese una cultura del benessere psico-fisico sta finalmente prendendo piede: la tendenza attuale è infatti quella di "personalizzare" il check-up in relazione a ciò che può essere emerso dall’anamnesi e da un’accurata visita medica preliminare. Non più dunque, una semplice (e poco efficace) serie di esami standard, ma un percorso maggiormente personalizzato e consapevole da parte del paziente stesso.</p>
 		<p>Lo scopo di questo breve, semplice testo è proprio quello di fornire il maggior numero possibile di informazioni utili per quanto concerne le più importanti e comuni tipologie di esame medico. Per fare ciò, ci siamo avvalsi della collaborazione e dell’aiuto di una serie di stimati professionisti del settore medico.</p>
-		<p>In ciascun capitolo di questo e-book, potrete trovare</p>
+		<p>In ciascun capitolo di questo e-book, potrete trovare:</p>
 		<ul class="shortcut">
 			<li>una breve panoramica e descrizione a riguardo dell’utilità specifica di ciascun tipo di esame medico: riteniamo infatti che, per una corretta riuscita di ciascun esame, sia necessaria anche un’adeguata comprensione delle procedure da parte del paziente stesso;</li>
 			<li>una dettagliata descrizione di ciò che il paziente dovrà o non dovrà fare nella fase di preparazione all’esame medico in oggetto: La buona riuscita di una procedura medica, pur non potendo prescindere dall’adeguata preparazione tecnica e professionale del personale medico di riferimento, necessita anche di una preparazione adeguata del paziente stesso all’esame: il paziente non è infatti, durante l’esame, una semplice figura passiva, secondaria, bensì soggetto attivo, vero protagonista e fulcro della procedura in atto;</li>
@@ -147,15 +147,15 @@
 		
 		<h3 class="subsection reason">Che cos’è la broncoscopia?</h3>
 		<p>La Broncoscopia è un esame invasivo dell’albero tracheobronchiale che ha finalità diagnostiche e terapeutiche.</p>
-		<p>Distinguiamo la broncoscopia rigida da quella flessibile, altresì conosciuta ormai come videofibrobroncoscopia. </p>	
+		<p>Distinguiamo la broncoscopia rigida da quella flessibile, altresì conosciuta ormai come videofibrobroncoscopia.</p>	
 		<p>L’esame, in genere indolore, viene eseguito previa sedazione locale alla gola e a paziente sveglio, sedato. Nel caso di broncoscopia con strumentazione rigida, l’esame è eseguito esclusivamente a paziente anestetizzato.</p>
 		<p>La scelta dell’una o dell’altra metodica, come del tipo di anestesia, viene compiuta dal medico in accordo con il paziente e comunque sempre in base alle condizioni cliniche di base ed al motivo dell’indagine.</p>
 		<p>L’esame è eseguito sempre in posizione supina e il broncoscopio, a seconda dell’esperienza dell’operatore sanitario e delle caratteristiche del paziente, viene introdotto attraverso la bocca ma a volte - come nel caso della broncoscopia flessibile -  è possibile procedere all’introduzione dello strumento anche attraverso il naso.</p>
 		<p>La durata dell’esame è molto variabile ed è correlata alle necessità diagnostiche per le differenti tipologie di paziente.</p>
 		<div class="grey">
 			<h4 class="duration">Indicazioni all’esame</h4>
-			<p>L’esame è indicato in molte condizioni patologiche dell’albero tracheobronchiale grazie alla strumentazione oggi disponibile e alle nuove, recentissime, tecniche endoscopiche.<p>
-			<p>Le principali indicazioni sono:<p>
+			<p>L’esame è indicato in molte condizioni patologiche dell’albero tracheobronchiale grazie alla strumentazione oggi disponibile e alle nuove, recentissime, tecniche endoscopiche.</p>
+			<p>Le principali indicazioni sono:</p>
 			<ul>
 			<li>diagnosi, stadiazione e terapia delle neoplasie polmonari;</li>	
 			<li>diagnosi delle infezioni polmonari e dell’albero tracheobronchiale;</li>		
