--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 		<h2 id="menu-5" class="scroll-to section-header article-title icon">Rettoscopia<br><span>Quali sono i sintomi che dovrebbero spingervi a fare questo check-up e come ci si prepara adesso</span></h2>
 		<p>La rettoscopia è un esame che permette la visualizzazione del condotto anale e dell’ano. Durante la rettoscopia si può osservare anche il tratto finale dell’intestino crasso. La rettoscopia è un esame che consente la valutazione dello stato morfologico della mucosa dell’intestino crasso. L’esame permette di scoprire stati infiammatori, ulcerosi o neoplastici.</p>
 		<h3 class="subsection reason">In che consiste la rettoscopia?</h3>
-		<p>Attraverso la rettoscopia si effettua un un prelievo che verrà sottoposto ad esame istologico e batteriologico. È possibile anche la rimozione di polipi, di corpi estranei e frenare un’eventuale perdita di sangue. L’esame viene eseguito con un rettoscopio, un tubo rigido di una lunghezza che varia dai 20 ai 30 cm e di diametro di 2 cm. </p>
+		<p>Attraverso la rettoscopia si effettua un prelievo che verrà sottoposto ad esame istologico e batteriologico. È possibile anche la rimozione di polipi, di corpi estranei e frenare un’eventuale perdita di sangue. L’esame viene eseguito con un rettoscopio, un tubo rigido di una lunghezza che varia dai 20 ai 30 cm e di diametro di 2 cm. </p>
 		<h3 class="prepare icon">Indicazioni per la rettoscopia:</h3>
 		<p>I sintomi che suggeriscono di sottoporsi a una rettoscopia sono i seguenti:</p>
 		<ul>
