--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<li class="list" data-id="menu-4" data-hash="mammografia">Mammografia</li>
 			<li class="list" data-id="menu-5" data-hash="rettoscopia">Rettoscopia</li>
 			<li class="list" data-id="menu-6" data-hash="ecografia-addome">Ecografia all’addome</li>
-		 	<li class="list" data-id="menu-7" data-hash="ecografia-mammaria">Ecografia Mammaria</li>
+		 	<li class="list" data-id="menu-7" data-hash="ecografia-mammaria">Ecografia mammaria</li>
 			<li class="list" data-id="menu-8" data-hash="ecografia-ginecologica">Ecografia ginecologica</li>
 			<li class="list" data-id="menu-9" data-hash="ecografia-tiroidea">Ecografia tiroidea</li>
 			<li class="list" data-id="menu-10" data-hash="risonanza-magnetica">Risonanza magnetica</li>
@@ -602,7 +602,7 @@
 			<img class="doc-img" src="img/FrancescoLavorgna.png" alt="Dott. Francesco Lavorgna">
 			<p class="doc-name">Dott. Francesco Lavorgna</p>
 			<p class="doc-special">Radiologo, oncologo, internista</p>
-			<p class="doc-q"><b>Qual è l'errore più comune che i pazienti commettono nel fare questo determinato esame?</b></p>
+			<p class="doc-q"><b>Qual è l'errore più comune che i pazienti commettono nel fare questo esame?</b></p>
 			<p class="doc-a">“L'errore più comune è nella preparazione all'esame che richiede 8 ore di digiuno e la somministrazione di almeno 1/2 l di acqua 1 ora prima dell'esame. Un addome con poca aria ed una vescica piena a sufficienza rendono l'esame notevolmente più attendibile”.</p>
 		</blockquote>
 		</article>
@@ -712,7 +712,7 @@
 			<img class="doc-img" src="img/FabrizioPaolilloDiodat.jpg" alt="Dott. Fabrizio Paolillo Diodati">
 			<p class="doc-name">Dott. Fabrizio Paolillo Diodati</p>
 			<p class="doc-special">Ginecologo</p>
-			<p class="doc-q"><b>Qual è l'errore più comune che i pazienti commettono nel fare questo determinato esame?</b></p>
+			<p class="doc-q"><b>Qual è l'errore più comune che i pazienti commettono nel fare questo esame?</b></p>
 			<p class="doc-a">“Un errore comune è quello di evitare di sottoporsi all’esame durante il ciclo mestruale. Tuttavia, talvolta, è proprio durante tale periodo che va eseguito l’esame, soprattutto quando bisogna decidere di cominciare alcuni tipi di terapie. In altri casi, a seconda delle problematiche da studiare, sarà il ginecologo a stabilire se l’ecografia va effettuata prima o dopo la mestruazione”.</p>
 		</blockquote>
 		</article>
