--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
 			<p>Come comportarsi prima dell'esame del sangue:</p>
 			<ul>
 				<li>Non bere alcool 2-3 giorni prima dell’esame;</li>
-				<li>Non bere né caffè né tè almeno 12 ore prima del campionamento;</li>
+				<li>Non bere né caffè né tè nelle 12 ore che precedono il campionamento;</li>
 				<li>Per quanto possibile, eliminare le cause di stress</li>
 			</ul>
 			<p>Il giorno dell’ esame:</p>
