--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
 		<p>Lo scopo di questo breve, semplice testo è proprio quello di fornire il maggior numero possibile di informazioni utili per quanto concerne le più importanti e comuni tipologie di esame medico. Per fare ciò, ci siamo avvalsi della collaborazione e dell’aiuto di una serie di stimati professionisti del settore medico.</p>
 		<p>In ciascun capitolo di questo e-book, troverete:</p>
 		<ul class="shortcut">
-			<li>una breve panoramica e descrizione circa l’utilità specifica di ciascun tipo di esame medico: riteniamo infatti che, per una corretta riuscita di ciascun esame, sia necessaria anche un’adeguata comprensione delle procedure da parte del paziente stesso;</li>
-			<li>una dettagliata descrizione di ciò che il paziente dovrà o non dovrà fare nella fase di preparazione all’esame medico in oggetto: la buona riuscita di una procedura medica, pur non potendo prescindere dall’adeguata preparazione tecnica e professionale del personale medico di riferimento, necessita anche di una preparazione adeguata del paziente stesso all’esame. Il paziente non è infatti, durante l’esame, una semplice figura passiva, secondaria, bensì soggetto attivo, vero protagonista e fulcro della procedura in atto;</li>
-			<li>una panoramica sul costo medio dell’esame in oggetto in un alcune delle maggiori città italiane: Milano, Torino, Roma, Napoli, Palermo;</li>
-			<li>laddove necessario, i commenti e le risposte dei medici co-autori di questo testo, allo scopo di fornire ulteriori chiarimenti circa le procedure, l’utilità e gli errori più comuni commessi dai pazienti nel prepararsi a tali esami medici.</li>
+			<li>Una breve panoramica e descrizione circa l’utilità specifica di ciascun tipo di esame medico: riteniamo infatti che, per una corretta riuscita di ciascun esame, sia necessaria anche un’adeguata comprensione delle procedure da parte del paziente stesso;</li>
+			<li>Una dettagliata descrizione di ciò che il paziente dovrà o non dovrà fare nella fase di preparazione all’esame medico in oggetto: la buona riuscita di una procedura medica, pur non potendo prescindere dall’adeguata preparazione tecnica e professionale del personale medico di riferimento, necessita anche di una preparazione adeguata del paziente stesso all’esame. Il paziente non è infatti, durante l’esame, una semplice figura passiva, secondaria, bensì soggetto attivo, vero protagonista e fulcro della procedura in atto;</li>
+			<li>Una panoramica sul costo medio dell’esame in oggetto in un alcune delle maggiori città italiane: Milano, Torino, Roma, Napoli, Palermo;</li>
+			<li>Laddove necessario, i commenti e le risposte dei medici co-autori di questo testo, allo scopo di fornire ulteriori chiarimenti circa le procedure, l’utilità e gli errori più comuni commessi dai pazienti nel prepararsi a tali esami medici.</li>
 		</ul>
 		<p>Nella speranza (e nella convinzione) che questo piccolo testo possa risultare per voi una piccola, affidabile "bussola" nell’orientarvi attraverso il "grande mare" delle differenti procedure ed esami medici, vi auguriamo una buona lettura ma, soprattutto, una buona e serena prevenzione.</p>
 		</article>
@@ -157,24 +157,24 @@
 			<p>L’esame è indicato in molte condizioni patologiche dell’albero tracheobronchiale grazie alla strumentazione oggi disponibile e alle nuove, recentissime, tecniche endoscopiche.</p>
 			<p>Le principali indicazioni sono:</p>
 			<ul>
-			<li>diagnosi, stadiazione e terapia delle neoplasie polmonari;</li>	
-			<li>diagnosi delle infezioni polmonari e dell’albero tracheobronchiale;</li>		
-			<li>diagnosi di malattie interstiziali del polmone;</li>
-			<li>valutazione dei corpi estranei endobronchiali;</li>
-			<li>valutazione post chirurgia toracica;</li>
-			<li>valutazione della tosse di origine sconosciuta;</li>
-			<li>valutazione dei sanguinamenti dell’albero tracheo-bronchiale;</li>
-			<li>drenaggio delle secrezioni bronchiali;</li>
-			<li>terapia dell’asma e BPCO in casi molto selezionati;</li>
+			<li>Diagnosi, stadiazione e terapia delle neoplasie polmonari;</li>	
+			<li>Diagnosi delle infezioni polmonari e dell’albero tracheobronchiale;</li>		
+			<li>Diagnosi di malattie interstiziali del polmone;</li>
+			<li>Valutazione dei corpi estranei endobronchiali;</li>
+			<li>Valutazione post chirurgia toracica;</li>
+			<li>Valutazione della tosse di origine sconosciuta;</li>
+			<li>Valutazione dei sanguinamenti dell’albero tracheo-bronchiale;</li>
+			<li>Drenaggio delle secrezioni bronchiali;</li>
+			<li>Terapia dell’asma e BPCO in casi molto selezionati;</li>
 			</ul>
 			<h4>Controindicazioni</h4>
 			<p>L’esame ha alcune controindicazioni che devono essere valutate preventivamente dall’endoscopista in rapporto anche alla reale necessità di esecuzione dell’esame stesso. Sono condizioni ad altissimo rischio:</p>
 			<ul>
-			<li>aritmie severe e instabili;</li>	
-			<li>infarto miocardico recente (entro 6 mesi);</li>	
-			<li>severa insufficienza respiratoria;</li>
-			<li>scompenso cardiaco congestizio;</li>
-			<li>disturbi severi della coagulazione;</li>
+			<li>Aritmie severe e instabili;</li>	
+			<li>Infarto miocardico recente (entro 6 mesi);</li>	
+			<li>Severa insufficienza respiratoria;</li>
+			<li>Scompenso cardiaco congestizio;</li>
+			<li>Disturbi severi della coagulazione;</li>
 			</ul>
 		</div>
 		<h3 class="prepare icon">Come prepararsi alla broncoscopia?</h3>
