--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
  		<li>Non guidare nelle 12 ore successive l’anestesia.</li>
  		</ul>
 		<h3 class="pen icon">Condotta dopo l’esame</h4>
-			<p>Dopo l’esame si possono sentire rigonfiamenti e contrazioni causati dall’aria introdotta nell’intestino durante la prova. Questa sensazione passa dopo la flatulenza. Dopo il test è possibile mangiare e tornare alle normali attività. È sconsigliato guidare poichè i sedativi possono rallentare i riflessi.</p>
+			<p>Dopo l’esame si possono avvertire rigonfiamenti e contrazioni causati dall’aria introdotta nell’intestino durante la prova. Questa sensazione passa dopo la flatulenza. Dopo il test è possibile mangiare e tornare alle normali attività. È sconsigliato guidare poichè i sedativi possono rallentare i riflessi.</p>
 			<p>Se sono stati somministrati sedativi, il paziente dovrebbe rimanere sotto osservazione per 1-2 ore. Avrà inoltre bisogno di qualcuno che possa riaccompagnarlo a casa dopo l’esame. Se non ci si ricorda delle istruzioni che il medico ha dato dopo l’esame, contattarlo il giorno seguente.</p>
 		<h3 class="price icon">Qual è il prezzo medio di una colonscopia?</h3>
 		<div class="pricelist">
