--- a/index.html
+++ b/index.html
@@ -542,8 +542,7 @@
 		<p>Permette inoltre di valutare con precisione la presenza di trombi oppure depositi di colesterolo nei vasi, che possono ostacolare, parzialmente o completamente, la circolazione sanguigna.</p>
 		<div class="grey">
 			<h4 class="duration">Come si svolge l’esame addominale?</h4>
-		<p>Nella maggioranza degli esami a ultrasuoni, la posizione del paziente sul lettino è supina con la pancia in alto</p>.
-		<p>Si utilizza una piccola quantità di gel specifico per ultrasuoni sull’addome allo scopo di favorire lo scorrimento della sonda ecografica sulla pelle ed eliminare l’aria che non permetterebbe il passaggio di ultrasuoni.</p>
+		<p>Nella maggioranza degli esami a ultrasuoni, la posizione del paziente sul lettino è supina con la pancia in alto. Si utilizza una piccola quantità di gel specifico per ultrasuoni sull’addome allo scopo di favorire lo scorrimento della sonda ecografica sulla pelle ed eliminare l’aria che non permetterebbe il passaggio di ultrasuoni.</p>
 		<p>A seconda dell’esigenza di valutazione, la posizione del paziente può essere spostata sul fianco destro o sinistro.</p>
 		<p>L’esito dell’esame è immediato, così come la consegna del referto.</p>
 		<p>L’ecografia addominale può avere durata variabile a seconda della preparazione del paziente e dell’eventuale patologia rilevata.</p>
