--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
 		<article class="white-well-box">
 		<h2 id="menu-9" class="scroll-to section-header article-title icon">Ecografia tiroidea<br><span>La tiroide è il “controllore” del nostro metabolismo: come tenerla sotto osservazione</span></h2>
 		<p><strong>L’ecografia tiroidea</strong> consente una valutazione accurata di eventuali anomalie della ghiandola. È un esame rapido, indolore, poco invasivo e sicuro.
-		<p>Andiamo a vedere come si svolge l’ecografia tiroidea, quali sono le indicazioni per sottoporsi al test e che tipo di malattie si possono scoprire grazie a questo esame.</p>
+		<p>Vediamo come si svolge l’ecografia tiroidea, quali sono le indicazioni per sottoporsi al test e che tipo di malattie si possono scoprire grazie a questo esame.</p>
 		<p><strong>L’ecografia tiroidea a ultrasuoni</strong> è il metodo più semplice e meno invasivo per esaminare la tiroide. Grazie all’ecografia tiroidea si possono determinare la dimensione, la forma, la posizione e la struttura di questa ghiandola. L’esame permette di constatare la presenza di tumori, di cisti o di determinare altri cambiamenti che non risultano al tatto.</p>
 		Quando il medico rileva mutamenti allarmanti, si prosegue con la biopsia della tiroide, che consiste nel prelievo di un frammento del nodulo con un ago. Il prelievo viene inviato al patologo. I test di laboratorio permettono di individuare la natura del nodulo: benigna oppure maligna.</p>
 		<div class="grey">
