--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
 			<h4 class="duration">L’ecografia tiroidea – indicazioni</h4>
 			<p>Il medico ordina di fare un’ecografia tiroidea a ultrasuoni nel caso in cui nota un ingrandimento del perimetro del collo o nel caso di anomalie rilevate durante la palpazione. L’ecografia tiroidea è indicata anche quando la concentrazione degli ormoni della tiroide è irregolare (diagnosi di ipertiroidismo o ipotiroidismo).</p>
 			<h4>L’ecografia tiroidea – come prepararsi all’esame?</h4>
-			<p>Non è necessario prepararsi all’esame. Nel caso in cui il paziente abbia già eseguito esami radiologici o scintigrafici della tiroide e i test per il livello degli ormoni della tiroide, il paziente dovrebbe portare risultati.</p>
+			<p>Non è necessario prepararsi all’esame. Nel caso in cui il paziente abbia già eseguito esami radiologici o scintigrafici della tiroide e i test per il livello degli ormoni della tiroide, il paziente dovrebbe portare i risultati.</p>
 		</div>
 		<h3 class="prepare icon">L’ecografia tiroidea – in che consiste?</h3>
 		<p>L’ecografia a ultrasuoni è un esame indolore e sicuro. L’esame si esegue da sdraiati: il medico mette del gel sulla superficie del collo e poi sposta la sonda sul collo e l’immagine appare sullo schermo. Il risultato dell’esame è trasmesso al paziente sotto forma di descrizione a cui vengono aggiunte le foto degli ultrasuoni.</p>
