--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
 				<li>Per quanto possibile, il prelievo di sangue si deve eseguire prima di assumere farmaci la mattina, a meno che il medico decida altrimenti;</li>
 				<li>Il prelievo deve essere effettuato al mattino;</li>
 				<li>Prima dell’esame, è consigliabile per il paziente rimanere a riposo per 10-15 minuti (posizione seduta);</li>
-				<li>Fare attenzione allo sforzo fisico, anche moderato: attività come una passeggiata o salire le scale - possono cambiare i risultati degli esami di laboratorio.</li>
+				<li>Fare attenzione allo sforzo fisico, anche moderato: attività come una passeggiata o salire le scale possono cambiare i risultati degli esami di laboratorio.</li>
 			</ul>
 		</div>
 
