--- a/index.html
+++ b/index.html
@@ -1198,7 +1198,7 @@
 				<p class="doc-special">Radiologo, oncologo, internista</p>
 				<p>Iscritto all’ordine dei medici di Roma e Provincia, da oltre 25 anni si occupa di Diagnostica Ecografica, con particolare riguardo all’oncologia, anche pediatrica.</p>
 				<p>Si è formato presso l’Università “La Sapienza” di Roma e i maggiori ospedali della Regione Lazio. Ha sempre privilegiato il contatto diretto e continuo con il paziente, al fine di prevenire quella che definisce la “sindrome da abbandono”, che spesso accompagna i momenti di distanza dal paziente durante una terapia, e che può far cadere il paziente in momenti di sconforto.</p>
-				<p>Maggiori informazioni sugli esami ecografici sono disponibili sul sito:: <a href="http://www.ecografia-francescolavorgna.it/" target="_blank" rel="nofollow">http://www.ecografia-francescolavorgna.it/</p>
+				<p>Maggiori informazioni sugli esami ecografici sono disponibili sul sito: <a href="http://www.ecografia-francescolavorgna.it/" target="_blank" rel="nofollow">http://www.ecografia-francescolavorgna.it/</p>
 				<p><a class="btn-doc" href="https://www.docplanner.it/francesco-lavorgna/radiologo-oncologo-internista/roma" target="_blank" rel="nofollow">Prenota una visita</a></p>
 			</blockquote>
 			<blockquote style="background-color:#f3f7f7">
