--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 			<li>Hai già fatto un esame del seno: in tal caso, è necessario fornire i risultati.</li>
 		</ul>
 		<h3 class="subsection prepare icon">Mammografia – preparazione all’esame</h3>
-		<p>La mammografia non richiede preparazioni particolari del paziente, ma:</p>
+		<p>La mammografia non richiede preparazioni particolari da parte del paziente, ma è utile seguire alcune semplci regole:</p>
 		<ul>
 		<li>Alla data prevista per la mammografia non utilizzare polvere di talco, balsamo, deodorante né alcuna crema nella parte superiore del corpo;</li>
 		<li>Si deve accedere all’esame con una richiesta medica;</li>
