--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 		<p>La gastroscopia è un esame che permette al medico di visualizzare direttamente la mucosa dello stomaco, del piloro e del duodeno. La prova è effettuata con un endoscopio, cioè un tubo flessibile che trasferisce l’immagine dall’interno del tubo digerente allo schermo multicolore. Un vantaggio importante dell’endoscopio è la possibilità, con un intervento, solo di valutare lo stato della mucosa e di prelevare un piccolo campione di tessuto per un’analisi ulteriore. </p>
 		<h3 class="subsection reason">Come prepararsi alla gastroscopia?</h3>
 		<ul>
-		<li>Non mangiare nulla durante le 8 ore precedenti al test</li>
+		<li>Non mangiare nulla durante le 8 ore precedenti al test.</li>
 		<li>Non bere nulla, non fumare, non masticare chewing gum durante le 4 ore che precedono la prova.</li>
 		<li>Nel caso di pazienti a rischio, compresi i pazienti  con endocardite, con protesi valvolari, con una protesi vascolare, prima della prova può essere necessario somministrare un antibiotico. La decisione sulla necessità e sul modo di somministrare un antibiotico sono presi dal medico di riferimento.</li>
 		<li>Prima della prova, rimuovere le protesi.</li>
