--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<article class="white-well-box">
 		<div class="cover">
 		<a href="https://www.docplanner.it/" target="_blank"><img class="doc-logo" src="//www.docplanner-platform.com/img/it/logo/logo-white-it-shadow.svg?v=4" alt="docplanner.it"></a>
-		<h1 id="menu-0"><strong>Esami medici</strong><br> &nbsp;quali sono e come affrontarli</h1>
+		<h1 id="menu-0"><strong>Esami medici:</strong><br> &nbsp;quali sono e come affrontarli</h1>
 		<div class="head-foot">
 			<p>Un e-book informativo creato per voi da</p>
 			<p>DocPlanner</p>
