--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,7 @@
 				<p class="doc-name">Dott. Alessandro Casini</p>
 				<p class="doc-special">Diabetologo, endocrinologo</p>
 				<p>Il dottor Casini ha studiato presso l’Università di Roma “La Sapienza” (1991) e presso la  Scuola di Specializzazione in Endocrinologia e Malattie del Ricambio.</p>
-				<p>Il dottor Alessandro Casini è un endocrinologo che ha, alle sue spalle, più di venti anni di pratica clinica e ha particolare esperienza per le patologie tiroidee, per l’obesita’, per la patologia andrologica e per il diabete mellito. </p>
+				<p>Il dottor Alessandro Casini è un endocrinologo che ha, alle sue spalle, più di venti anni di pratica clinica ed è specialista in patologie tiroidee, obesita’, patologia andrologica e diabete mellito. </p>
 				<p>È vicepresidente dell'associazione italiana patologie osteometaboliche (Tendi la Mano AIPOM onlus) che si occupa della prevenzione di numerose patologie endocrine ed osteometaboliche.</p>
 				<p><a class="btn-doc" href="https://www.docplanner.it/alessandro-casini/diabetologo-endocrinologo/ciampino" target="_blank" rel="nofollow">Prenota una visita</a></p>
 			</blockquote>
