--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 
 	<link rel="preload" href="//www.docplanner-platform.com/staging/css/goro-homepage.css?v=436052329" as="style" onload="this.rel='stylesheet'"/>
+	<link rel="preload" href="//www.docplanner-platform.com/img/general/homepage/homepage-bg.jpg?v=9" as="image"/>
 
 	<link rel="dns-prefetch" href="//ajax.googleapis.com"/>
 	<link rel="dns-prefetch" href="//apis.google.com"/>
