--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pl" region="pl" prefix="ya: http://webmaster.yandex.ru/vocabularies/">
 <head>
 
-	<link rel="preload" href="//www.docplanner-platform.com/staging/css/goro-homepage.css?v=436052329" as="style" onload="this.rel='stylesheet'"/>
+	<link rel="preload" href="//www.docplanner-platform.com/staging/css/goro-homepage.css?v=436052329" as="style"/>
 	<link rel="preload" href="//www.docplanner-platform.com/img/general/homepage/homepage-bg.jpg?v=9" as="image"/>
 	<!--<link rel="preload" href="//fonts.googleapis.com/css?family=Noto+Sans" as="font">-->
 
