--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 	<!--<link href="//fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">-->
 
 
-	<link href="//www.docplanner-platform.com/staging/css/goro-homepage.css?v=436052329" rel="stylesheet" />
+	<!--<link href="//www.docplanner-platform.com/staging/css/goro-homepage.css?v=436052329" rel="stylesheet" />-->
 
 
 
