Only styles inline

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<!--<link rel="preload" href="//www.docplanner-platform.com/staging/css/goro-homepage.css?v=436052329" as="style"/>-->
 	<link rel="preload" href="//www.docplanner-platform.com/img/general/homepage/homepage-bg.jpg?v=9" as="image"/>
-	<!--<link rel="preload" href="//fonts.googleapis.com/css?family=Noto+Sans" as="font">-->
+	<link rel="preload" href="//fonts.googleapis.com/css?family=Noto+Sans" as="font">
 
 	<link rel="dns-prefetch" href="//ajax.googleapis.com"/>
 	<link rel="dns-prefetch" href="//apis.google.com"/>
@@ -399,7 +399,7 @@
 
 	<link rel="image_src" href="//www.docplanner-platform.com/staging//img/pl/logo/logo-small-pl.png"/>
 
-	<!--<link href="//fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">-->
+	<link href="//fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 
 
 	<!--<link href="//www.docplanner-platform.com/staging/css/goro-homepage.css?v=436052329" rel="stylesheet" />-->
