--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="pl" region="pl" prefix="ya: http://webmaster.yandex.ru/vocabularies/">
 <head>
 
-	<link rel="preload" href="//www.docplanner-platform.com/staging/css/goro-homepage.css?v=436052329" as="style"/>
+	<!--<link rel="preload" href="//www.docplanner-platform.com/staging/css/goro-homepage.css?v=436052329" as="style"/>-->
 	<link rel="preload" href="//www.docplanner-platform.com/img/general/homepage/homepage-bg.jpg?v=9" as="image"/>
-	<link rel="preload" href="//fonts.googleapis.com/css?family=Noto+Sans" as="font">
+	<!--<link rel="preload" href="//fonts.googleapis.com/css?family=Noto+Sans" as="font">-->
 
 	<link rel="dns-prefetch" href="//ajax.googleapis.com"/>
 	<link rel="dns-prefetch" href="//apis.google.com"/>
@@ -399,7 +399,7 @@
 
 	<link rel="image_src" href="//www.docplanner-platform.com/staging//img/pl/logo/logo-small-pl.png"/>
 
-	<link href="//fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+	<!--<link href="//fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">-->
 
 
 	<link href="//www.docplanner-platform.com/staging/css/goro-homepage.css?v=436052329" rel="stylesheet" />
@@ -438,7 +438,7 @@
 </head>
 <body id="homepage" class="main-homepage" >
 
-<!--<style>-->
+<style>
 	<!--/*!-->
  <!--* Bootstrap v3.3.7 (http://getbootstrap.com) extended by DocPlanner (http://frontend.docplanner.io/dpuikit/)-->
  <!--* Copyright 2011-2016 Twitter, Inc.-->
@@ -504,7 +504,7 @@
  <!--*/#homepage-search{background:rgba(0,0,0,.07);border-radius:5px;padding:10px}#homepage-search #search{position:relative}#homepage-search #search input[placeholder]::-webkit-input-placeholder{color:#747474}#homepage-search #search input[placeholder]:-moz-placeholder{color:#747474}#homepage-search #search input[placeholder]::-moz-placeholder{color:#747474}#homepage-search #search input[placeholder]:-ms-input-placeholder{color:#747474}#homepage-search #search p{color:#333;font-size:18px;font-weight:700;position:absolute;top:-40px}#homepage-search #search .search-field{border:none;font-size:16px;height:55px}#homepage-search #search .form-control{border-radius:3px}#homepage-search #search .icon-trigger{right:10px;top:26px}@media (max-width:0px){#homepage-search #search .icon-trigger{right:20px}}#homepage-search #search button{background:#3d83df;height:55px}#homepage-search #search button:focus,#homepage-search #search button:hover{background:#347dde}/*!-->
  <!--* Homepage intro-->
  <!--**/html[region=tr] #intro{background-image:url(//www.docplanner-platform.com/img/tr/homepage/homepage-bg-tr.jpg?v=8)}#popular-queries{background:#fff;border-bottom:1px #eef2f2 solid;height:0;overflow:hidden}#popular-queries h5{text-overflow:ellipsis;overflow:hidden;white-space:nowrap}#popular-queries h5 a{color:#333}#popular-queries .container{padding-bottom:30px;padding-top:50px}#benefits{background:#fff;min-height:200px;padding-top:50px}#benefits .benefit{align-items:center;display:flex;flex-wrap:wrap}#benefits .benefit h3{margin:0 0 0 20px;max-width:170px}#benefits .benefit p{margin-top:10px}#says-opinions{background:#fff;border-top:1px #eef2f2 solid;padding-bottom:30px}#says-opinions figcaption{background:#f6f8f8;border-radius:5px;overflow:hidden;padding:10px}#popular-specializations-cities li{text-overflow:ellipsis;overflow:hidden;white-space:nowrap}#popular-specializations-cities li a{color:#747474}#popular-links{margin-bottom:75px}#popular-links a{color:#747474}#popular-specializations{margin-bottom:75px}.opinion-boost-homepage #intro{height:520px}#init-loader{display:none}.rating{position:relative;display:inline-block;background-image:url(//www.docplanner-platform.com/img/general/rating/stars-gray.svg)}.rating.big[data-score="0.5"] .score{width:8.5%}.rating.big[data-score="1.5"] .score{width:29.5%}.rating.big[data-score="3.5"] .score{width:70%}.rating.big[data-score="4.5"] .score{width:90%}.rating.big,.rating.big .score{width:111px;height:20px;background-size:auto 20px}.rating.medium[data-score="0.5"] .score{width:9%}.rating.medium[data-score="1.5"] .score{width:29%}.rating.medium[data-score="3.5"] .score{width:70%}.rating.medium[data-score="4.5"] .score{width:90%}.rating.medium,.rating.medium .score{width:95px;height:17px;background-size:auto 17px}.rating.small[data-score="0.5"] .score{width:9.5%}.rating.small[data-score="1.5"] .score{width:29.25%}.rating.small[data-score="3.5"] .score{width:70%}.rating.small[data-score="4.5"] .score{width:90%}.rating.small,.rating.small .score{width:83px;height:15px;background-size:auto 15px}.rating.micro[data-score="0.5"] .score{width:9%}.rating.micro[data-score="1.5"] .score{width:30%}.rating.micro[data-score="3.5"] .score{width:70%}.rating.micro[data-score="4.5"] .score{width:92%}.rating.micro,.rating.micro .score{width:72px;height:13px;background-size:auto 13px}.rating[data-score="0"] .score{width:0}.rating[data-score="1"] .score{width:20%}.rating[data-score="2"] .score{width:40%}.rating[data-score="2.5"] .score{width:50%}.rating[data-score="3"] .score{width:60%}.rating[data-score="4"] .score{width:80%}.rating[data-score="5"] .score{width:100%}.rating .score{position:absolute;left:0;top:0;background-image:url(//www.docplanner-platform.com/img/general/rating/stars-gold.svg)}.rating,.rating .score{display:inline-block;background-repeat:repeat-x}.rating{position:relative;display:inline-block;background-image:url(//www.docplanner-platform.com/img/general/rating/stars-gray.svg)}.rating.big[data-score="0.5"] .score{width:8.5%}.rating.big[data-score="1.5"] .score{width:29.5%}.rating.big[data-score="3.5"] .score{width:70%}.rating.big[data-score="4.5"] .score{width:90%}.rating.big,.rating.big .score{width:111px;height:20px;background-size:auto 20px}.rating.medium[data-score="0.5"] .score{width:9%}.rating.medium[data-score="1.5"] .score{width:29%}.rating.medium[data-score="3.5"] .score{width:70%}.rating.medium[data-score="4.5"] .score{width:90%}.rating.medium,.rating.medium .score{width:95px;height:17px;background-size:auto 17px}.rating.small[data-score="0.5"] .score{width:9.5%}.rating.small[data-score="1.5"] .score{width:29.25%}.rating.small[data-score="3.5"] .score{width:70%}.rating.small[data-score="4.5"] .score{width:90%}.rating.small,.rating.small .score{width:83px;height:15px;background-size:auto 15px}.rating.micro[data-score="0.5"] .score{width:9%}.rating.micro[data-score="1.5"] .score{width:30%}.rating.micro[data-score="3.5"] .score{width:70%}.rating.micro[data-score="4.5"] .score{width:92%}.rating.micro,.rating.micro .score{width:72px;height:13px;background-size:auto 13px}.rating[data-score="0"] .score{width:0}.rating[data-score="1"] .score{width:20%}.rating[data-score="2"] .score{width:40%}.rating[data-score="2.5"] .score{width:50%}.rating[data-score="3"] .score{width:60%}.rating[data-score="4"] .score{width:80%}.rating[data-score="5"] .score{width:100%}.rating .score{position:absolute;left:0;top:0;background-image:url(//www.docplanner-platform.com/img/general/rating/stars-gold.svg)}.rating,.rating .score{display:inline-block;background-repeat:repeat-x}.ecommerce__cart{border-bottom:1px solid rgba(0,191,165,.2);border-radius:0;margin-bottom:10px;padding:12px}.ecommerce__cart&#45;&#45;no-bottom{margin-bottom:0}.ecommerce__cart__icon-wrapper{display:inline-block;float:left;padding-right:16px}.ecommerce__cart__icon{top:6px}.ecommerce__cart__button{position:relative;top:8px}-->
-<!--</style>-->
+</style>
 
 <script type="text/javascript">
   (function(e,t){var n=e.amplitude||{_q:[],_iq:{}};var r=t.createElement("script");r.type="text/javascript";
