--- a/search.html
+++ b/search.html
@@ -380,7 +380,7 @@
 	<link href="//fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 
 
-	<link href="//www.docplanner-platform.com/staging/css/goro-search.css?v=1097929669" rel="stylesheet" />
+	<!--<link href="//www.docplanner-platform.com/staging/css/goro-search.css?v=1097929669" rel="stylesheet" />-->
 
 
 
