--- a/dp-search-mobile-optimized.html
+++ b/dp-search-mobile-optimized.html
@@ -2,8 +2,8 @@
 <html lang="pl" region="pl" prefix="ya: http://webmaster.yandex.ru/vocabularies/">
 <head>
 
-	<link rel="preload" href="//www.docplanner-platform.com/staging/css/jade-dpuikit-rwd-on.css?v=3033757889" as="style"/>
-	<link rel="preload" href="//www.docplanner-platform.com/staging/css/jade-search.css?v=1976328225" as="style"/>
+	<link rel="preload" href="css/jade-dpuikit-rwd-on.css" as="style"/>
+	<link rel="preload" href="css/jade-search.css" as="style"/>
 	<link rel="dns-prefetch" href="//ajax.googleapis.com"/>
 	<link rel="dns-prefetch" href="//s3-eu-west-1.amazonaws.com"/>
 	<link rel="dns-prefetch" href="//www.docplanner-platform.com/"/>
@@ -61,8 +61,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maxium-scale=1.0, user-scalable=no"/>
 	<link rel="shortcut icon" type="image/png" data-lazyload="//www.docplanner-platform.com/staging/img/general/icons/favicon.png?2370760445"/>
 	<link rel="image_src" href="//www.docplanner-platform.com/staging//img/pl/logo/logo-small-pl.png"/>
-	<link href="//www.docplanner-platform.com/staging/css/jade-dpuikit-rwd-on.css?v=3033757889" rel="stylesheet" />
-	<link href="//www.docplanner-platform.com/staging/css/jade-search.css?v=1976328225" rel="stylesheet" />
+	<link href="css/jade-dpuikit-rwd-on.css" rel="stylesheet" />
+	<link href="css/jade-search.css" rel="stylesheet" />
 
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -3836,7 +3836,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="//www.docplanner-platform.com/staging/js/goro-search.js?v=3830533961" defer="defer"></script>
 
-<script type="text/javascript">
+<script typ"text/javascript">
   function downloadJSAtOnload() {
     $(document).trigger("deferLoading");
   }
