--- a/dp-search-mobile-optimized.html
+++ b/dp-search-mobile-optimized.html
@@ -61,8 +61,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maxium-scale=1.0, user-scalable=no"/>
 	<link rel="shortcut icon" type="image/png" data-lazyload="//www.docplanner-platform.com/staging/img/general/icons/favicon.png?2370760445"/>
 	<link rel="image_src" href="//www.docplanner-platform.com/staging//img/pl/logo/logo-small-pl.png"/>
-	<link href="./css/jade-dpuikit-rwd-on.css" rel="stylesheet" />
-	<link href="./css/jade-search.css" rel="stylesheet" />
+	<link href="css/jade-dpuikit-rwd-on.css" rel="stylesheet" />
+	<link href="css/jade-search.css" rel="stylesheet" />
 
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
