Split CSS into 4

--- a/dp-search-mobile-optimized.html
+++ b/dp-search-mobile-optimized.html
@@ -2,7 +2,10 @@
 <html lang="pl" region="pl" prefix="ya: http://webmaster.yandex.ru/vocabularies/">
 <head>
 
-	<link rel="preload" href="css/jade-dpuikit-rwd-on.css" as="style"/>
+	<link rel="preload" href="css/jade-dpuikit-rwd-on-1.css" as="style"/>
+	<link rel="preload" href="css/jade-dpuikit-rwd-on-2.css" as="style"/>
+	<link rel="preload" href="css/jade-dpuikit-rwd-on-3.css" as="style"/>
+	<link rel="preload" href="css/jade-dpuikit-rwd-on-4.css" as="style"/>
 	<link rel="preload" href="css/jade-search.css" as="style"/>
 	<link rel="dns-prefetch" href="//ajax.googleapis.com"/>
 	<link rel="dns-prefetch" href="//s3-eu-west-1.amazonaws.com"/>
@@ -61,7 +64,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maxium-scale=1.0, user-scalable=no"/>
 	<link rel="shortcut icon" type="image/png" data-lazyload="//www.docplanner-platform.com/staging/img/general/icons/favicon.png?2370760445"/>
 	<link rel="image_src" href="//www.docplanner-platform.com/staging//img/pl/logo/logo-small-pl.png"/>
-	<link href="css/jade-dpuikit-rwd-on.css" rel="stylesheet" />
+	<link href="css/jade-dpuikit-rwd-on-1.css" rel="stylesheet" />
+	<link href="css/jade-dpuikit-rwd-on-2.css" rel="stylesheet" />
+	<link href="css/jade-dpuikit-rwd-on-3.css" rel="stylesheet" />
+	<link href="css/jade-dpuikit-rwd-on-4.css" rel="stylesheet" />
 	<link href="css/jade-search.css" rel="stylesheet" />
 
 	<!--[if lt IE 9]>
