--- a/dp-search-mobile-optimized.html
+++ b/dp-search-mobile-optimized.html
@@ -3855,8 +3855,8 @@
 	</div>
 </footer>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="//www.docplanner-platform.com/staging/js/goro-search.js?v=3830533961" defer="defer"></script>
+<!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>-->
+<!--<script src="//www.docplanner-platform.com/staging/js/goro-search.js?v=3830533961" defer="defer"></script>-->
 
 <script typ"text/javascript">
   function downloadJSAtOnload() {
